--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 12 Sept 2000</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> www.example.com</li>
+<!--                   <li><i class="icofont-rounded-right"></i> <strong>Website:</strong> <a href="https://pramoj21.github.io/static-web-main">https://pramoj21.github.io/static-web-main</a> </li> -->
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +91 7510850905</li>
                   <li><i class="icofont-rounded-right"></i> <strong>City:</strong> City : Kochi, Kerala</li>
                 </ul>
@@ -107,7 +107,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Age:</strong> 21</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>PhEmailone:</strong> pramojnm@gmail.com</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> pramojnm@gmail.com</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Freelance:</strong> Available</li>
                 </ul>
               </div>
@@ -437,16 +437,16 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <!-- <footer id="footer">
+  <footer id="footer">
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Mystery Code</span></strong>
+        &copy; Copyright Mystery Code
       </div>
-      <div class="credits">
+<!--       <div class="credits">
        Designed by <a href="#">Mystery Code</a>
-      </div>
+      </div> -->
     </div>
-  </footer> -->
+  </footer> 
   <!-- End  Footer -->
 
   <a href="#" class="back-to-top"><i class="icofont-simple-up"></i></a>
